[gd_scene load_steps=22 format=2]

[ext_resource path="res://scenes/level/character/enemy/EnemyVehicle.gd" type="Script" id=1]
[ext_resource path="res://data/images/NEW/character/enemy/EnemyFrames.png" type="Texture" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]

[sub_resource type="CapsuleShape2D" id=12]
radius = 11.0
height = 27.6667

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 4.125, 3.25 )

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 3.25, 1.625 )

[sub_resource type="CircleShape2D" id=13]
radius = 24.4182

[sub_resource type="StreamTexture" id=1]
load_path = "res://.import/EnemyFrames.png-558c9e784d3d76b842278deea9421b5b.stex"

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 2, 56, 2, 8 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 5, 56, 2, 8 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 8, 56, 2, 8 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 11, 56, 2, 8 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 14, 56, 2, 8 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 17, 56, 2, 8 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 20, 56, 2, 8 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 23, 56, 2, 8 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 0.5, 2.5 )

[sub_resource type="Animation" id=16]
resource_name = "MotorcycleStraight"
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteRear/SpriteFront:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=17]
resource_name = "MotorcycleTurnLeft"
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteRear/SpriteFront:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ -8.0 ]
}

[sub_resource type="Animation" id=18]
resource_name = "MotorcycleTurnRight"
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteRear/SpriteFront:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8.0 ]
}

[node name="EnemyVehicle" type="KinematicBody2D" groups=["character", "enemy"]]
scale = Vector2( 2, 2 )
script = ExtResource( 1 )
avoid_distance = 80.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 5.33333 )
shape = SubResource( 12 )

[node name="MetalArea2D" type="Area2D" parent="." groups=["Metal"]]
collision_layer = 2
collision_mask = 0

[node name="RearCollisionShape2D" type="CollisionShape2D" parent="MetalArea2D"]
position = Vector2( 0, -16.5 )
shape = SubResource( 14 )

[node name="MiddleCollisionShape2D" type="CollisionShape2D" parent="MetalArea2D"]
position = Vector2( 0, 6.75 )
shape = SubResource( 14 )

[node name="FrontCollisionShape2D" type="CollisionShape2D" parent="MetalArea2D"]
position = Vector2( -0.25, 20.625 )
shape = SubResource( 19 )

[node name="BoidArea2D" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="BoidArea2D"]
shape = SubResource( 13 )

[node name="SpriteRear" type="Sprite" parent="."]
texture = SubResource( 1 )
region_enabled = true
region_rect = Rect2( 6, 1, 14, 36 )

[node name="SpriteFront" type="Sprite" parent="SpriteRear"]
position = Vector2( 0, 17 )
texture = ExtResource( 2 )
offset = Vector2( 0, 6 )
region_enabled = true
region_rect = Rect2( 1, 39, 24, 15 )

[node name="SpriteTire" type="AnimatedSprite" parent="SpriteRear/SpriteFront"]
position = Vector2( 0, 9 )
frames = SubResource( 11 )
frame = 4
speed_scale = 10.0
playing = true

[node name="TireArea2D" type="Area2D" parent="SpriteRear/SpriteFront/SpriteTire" groups=["Tire"]]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpriteRear/SpriteFront/SpriteTire/TireArea2D"]
shape = SubResource( 15 )

[node name="Seat1" type="Position2D" parent="SpriteRear"]
position = Vector2( 0, 8 )

[node name="Seat2" type="Position2D" parent="SpriteRear"]
position = Vector2( 0, -6.5 )

[node name="Icon" type="Sprite" parent="."]
position = Vector2( 70.5, 27 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/MotorcycleStraight = SubResource( 16 )
anims/MotorcycleTurnLeft = SubResource( 17 )
anims/MotorcycleTurnRight = SubResource( 18 )

[connection signal="body_entered" from="BoidArea2D" to="." method="_on_BoidArea2D_body_entered"]
[connection signal="body_exited" from="BoidArea2D" to="." method="_on_BoidArea2D_body_exited"]
